--- a/.github/workflows/code-analisis.yml
+++ b/.github/workflows/code-analisis.yml
@@ -4,9 +4,8 @@ env:
   DOCKER_PROJECT_NAME: data_structures_playground
 
 jobs:
-  check_code_and_tests:
+  build_and_push_docker_image:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -20,8 +19,17 @@ jobs:
       - name: Push image to dockerhub
         run: docker push "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID"
 
-      - name: Run tests
-        run: docker run --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec rspec
+  run_tests:
+    runs-on: ubuntu-latest
+    needs: build_and_push_docker_image
+    steps:
+      - name: Run RSpec
+        run: docker run --pull always --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec rspec
 
+
+  run_static_code_analyser:
+    runs-on: ubuntu-latest
+    needs: build_and_push_docker_image
+    steps:
       - name: Run rubocop (static code analyser)
-        run: docker run --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec rubocop
+        run: docker run --pull always --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec rubocop
