--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,7 @@ Metrics/MethodLength:
 
 Metrics/BlockLength:
   Exclude:
-    - 'spec/**'
+    - 'spec/**/*'
 
 Gemspec/DateAssignment: # new in 1.10
   Enabled: true
